# sgx-template

./: Makefile  Readme.md
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl
enclave/src/: lib.rs
