[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.1.0"