[package]
authors = ["The Teaclave Authors"]
name = "MutualRA"
version = "1.0.0"

[lib]
crate-type = ["staticlib"]
name = "mra"

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_rand = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tcrypto = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_trts = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tse = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tstd = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"]}
sgx_types = {rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

[dependencies]
base64 = {git = "https://github.com/mesalock-linux/rust-base64-sgx"}
bit-vec = {version = "0.6", default-features = false}
chrono = {git = "https://github.com/mesalock-linux/chrono-sgx"}
httparse = {version = "1.3.2", default-features = false}
itertools = {version = "0.8", default-features = false, features = []}
lazy_static = {version = "*", default-features = false, features = ["spin_no_std"]}
num-bigint = {git = "https://github.com/mesalock-linux/num-bigint-sgx"}
serde = {git = "https://github.com/mesalock-linux/serde-sgx"}
serde_json = {git = "https://github.com/mesalock-linux/serde-json-sgx"}
webpki = {git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx"}
webpki-roots = {git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx"}
yasna = {git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"]}

[dependencies.rustls]
branch = "mesalock_sgx"
features = ["dangerous_configuration"]
git = "https://github.com/mesalock-linux/rustls"
